syntax = "proto3";
package em.liquidityprovider.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/e-money/em-ledger/x/liquidityprovider/types";

message GenesisState {
  repeated GenesisAcc accounts = 1 [
    (gogoproto.moretags) = "yaml:\"accounts\"",
    (gogoproto.nullable) = false
  ];
}

message GenesisAcc {
  string address = 1 [(gogoproto.moretags) = "yaml:\"address\""];
  repeated cosmos.base.v1beta1.Coin mintable = 2 [
    (gogoproto.moretags) = "yaml:\"mintable\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}
