syntax = "proto3";
package em.liquidityprovider.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/e-money/em-ledger/x/liquidityprovider/types";

service Msg {

  rpc MintTokens(MsgMintTokens) returns (MsgMintTokensResponse);

  rpc BurnTokens(MsgBurnTokens) returns (MsgBurnTokensResponse);
}

message MsgMintTokens {
  string liquidity_provider = 1
      [ (gogoproto.moretags) = "yaml:\"liquidity_provider\"" ];

  repeated cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}

message MsgMintTokensResponse {}

message MsgBurnTokens {
  string liquidity_provider = 1
      [ (gogoproto.moretags) = "yaml:\"liquidity_provider\"" ];

  repeated cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}

message MsgBurnTokensResponse {}